<resources>
    <string name="box_sharesdk_shared_with">Shared With</string>
    <string name="box_sharesdk_invite_collaborators">Invite People</string>
    <string name="box_sharesdk_invite_collaborators_activity_title">Invite</string>
    <string name="box_sharesdk_session_is_not_authenticated">Session is not authenticated</string>
    <string name="box_sharesdk_no_item_selected">No item selected</string>
    <string name="box_sharesdk_copy_link" description="button to copy link to clipboard">COPY LINK</string>
    <string name="box_sharesdk_copy_link_new" description="button to copy link to clipboard">Copy Link to Clipboard</string>
    <string name="box_sharesdk_share_via" description="button to share link via another app">Share via...</string>
    <string name="box_sharesdk_send_link" description="button to send link to another application">SEND LINK</string>
    <string name="box_sharesdk_accessible_public" description="description for public access">This content is publicly accessible to anyone with the link. No login is required.</string>
    <string name="box_sharesdk_accessible_public_new" description="description for public access">This content is publicly accessible to anyone with the link. No login is required.</string>
    <string name="box_sharesdk_accessible_company" description="description for company access">Accessible to people in your company</string>
    <string name="box_sharesdk_accessible_company_new" description="description for company access">This content is accessible to anyone in your organization and people who are collaborated into the folder</string>
    <string name="box_sharesdk_accessible_collaborator" description="description for collaborator access">Accessible to people the item is shared with</string>
    <string name="box_sharesdk_accessible_collaborator_new" description="description for collaborator access">This content is only accessible to people who are collaborated into this folder.h</string>
    <string name="box_sharesdk_password_protected" description="description for if a shared link is password proceted">Password protected</string>
    <string name="box_sharesdk_fetching_collaborators" description="message to show on spinner when we are fetching collaborators">Fetching collaborators</string>
    <string name="box_sharesdk_adding_collaborators" description="message to show on spinner when we are adding collaborators">Adding collaborators</string>
    <string name="box_sharesdk_enabling_share_link" description="message to show on spinner when we are enabling share link">Enabling share link</string>
    <string name="box_sharesdk_disabling_share_link" description="message to show on spinner when we are disabling share link">Disabling share link</string>
    <string name="box_sharesdk_updating_link_access" description="message to show on spinner when we are updating link access">Updating link access</string>
    <string name="box_sharesdk_share_link_enabled" description="shown if share link is enabled">Share Link Enabled</string>
    <string name="box_sharesdk_downloads_allowed" description="shown if user has permission to download link">Downloads allowed</string>
    <string name="box_sharesdk_downloads_allowed_new" description="shown if user has permission to download link">Allow downloading</string>
    <string name="box_sharesdk_downloads_disabled" description="shown if user has permission to download link">Downloads disabled</string>
    <string name="box_sharesdk_link_expires_on_x_date" description="start of the string telling when link expires">Link expires on %1$s</string>
    <string name="box_sharesdk_edit_link_access" description="button to change access properties of link">EDIT LINK ACCESS</string>
    <string name="box_sharesdk_cancel" description="button to cancel an action">CANCEL</string>
    <string name="box_sharesdk_ok" description="button to cancel an action">OK</string>
    <string name="box_sharesdk_enable_share_link" description="title description for enabling link">Enable Link</string>
    <string name="box_sharesdk_disable_share_link" description="button to disable a shared link">DISABLE SHARE LINK</string>
    <string name="box_sharesdk_disable_title" description="shown as title of warning dialog before disabling a shared link">Disable Share Link?</string>
    <string name="box_sharesdk_disable_message" description="shown as message of warning dialog before disabling a shared link">Disabling the link permanently deletes the current share link. Reenabling the link will generate a completely new and unique share link. Do you wish to disable the share link?</string>
    <string name="box_sharesdk_link_access" description="separates ui between the shared link box and options to change access">Access</string>
    <string name="box_sharesdk_access" description="header for different access types">Link Access</string>
    <string name="box_sharesdk_access_public" description="description for public access">People with the link</string>
    <string name="box_sharesdk_access_company" description="description for company access">People in your company</string>
    <string name="box_sharesdk_access_collaborator_file" description="description for collaborator access for a file">People in this file and folder</string>
    <string name="box_sharesdk_access_collaborator" description="description for collaborator access">People in this folder</string>
    <string name="box_sharesdk_password" description="header for password section">Password</string>
    <string name="box_sharesdk_set_password" description="hint for password dialog">Set password</string>
    <string name="box_sharesdk_require_password" description="toggle of using password or not">Require Password</string>
    <string name="box_sharesdk_link_expiration" description="header for link expiration section">Link Expiration</string>
    <string name="box_sharesdk_link_expire_link" description="toggle of whether to expire links">Expire Link</string>
    <string name="box_sharesdk_expire_on" description="header for date link expires">Expire On</string>
    <string name="box_sharesdk_problem_accessing_this_shared_link" description="Description shown when there is a problem with a shared link">There was a problem accessing this shared link.</string>
    <string name="box_sharesdk_unable_to_modify_toast" description="Toast shown if there is a problem modifying the shared link">There was a problem modifying/creating this shared link.</string>
    <string name="box_sharesdk_title_link_access">Link Access</string>
    <string name="box_sharesdk_title_share_link">Share Link</string>
    <string name="box_sharesdk_title_access_level">Access Level</string>
    <string name="box_sharesdk_change_access">Change Access</string>
    <string name="box_sharesdk_no_shared_link_instructions" description="description shown when there is no shared link enabled">Enabling a link generates a sharable link that others can use to access and view this content.</string>
    <string name="box_sharesdk_link_copied_to_clipboard" description="toast after copying a link using copy link button">Link copied to clipboard.</string>
    <string name="box_sharesdk_I_have_shared_x_with_you" description="message displayed in user's email when item is shared">I have shared \'%1$s\' with you on Box.</string>
    <string name="box_sharesdk_send_with" description="Title for intent chooser when choosing way to send shared content.">Send with:</string>
    <string name="box_sharesdk_network_error" description="Title indicating that an error occurred while performing an action">Network error. Please try again.</string>
    <string name="box_sharesdk_generic_error" description="indicating that an error occurred while performing an action">An error occurred. Please try again.</string>
    <string name="box_sharesdk_change_owner_alert_title" description="Title for the alert dialog to confirm owner update">Owner Update</string>
    <string name="box_sharesdk_change_owner_alert_message" description="Message for the alert dialog to confirm owner update">Making this user the item owner means that you will lose ownership and become an editor. Do you want to continue?</string>
    <string name="box_sharesdk_select_an_option" description="shown as title for letting a user choose the access level for a collaborator">Select an Option</string>
    <string name="box_sharesdk_role_name_editor" description="Name of role, which is the level of permission the person will be granted">Editor</string>
    <string name="box_sharesdk_role_name_viewer" description="Name of role, which is the level of permission the person will be granted">Viewer</string>
    <string name="box_sharesdk_role_name_previewer" description="Name of role, which is the level of permission the person will be granted">Previewer</string>
    <string name="box_sharesdk_role_name_uploader" description="Name of role, which is the level of permission the person will be granted">Uploader</string>
    <string name="box_sharesdk_role_name_previewer_uploader" description="Name of role, which is the level of permission the person will be granted">Previewer Uploader</string>
    <string name="box_sharesdk_role_name_viewer_uploader" description="Name of role, which is the level of permission the person will be granted">Viewer Uploader</string>
    <string name="box_sharesdk_role_name_co_owner" description="Name of role, which is the level of permission the person will be granted">Co-Owner</string>
    <string name="box_sharesdk_role_name_owner" description="Name of role, which is the level of permission the person will be granted">Owner</string>
    <string name="box_sharesdk_role_remove_person" description="Name of role, which is the level of permission the person will be granted">Remove this Person</string>
    <string name="box_sharesdk_invited_status" description="The status to indicate that a person was invited, but they have not accepted the collaboration request">Invited</string>
    <string name="box_sharesdk_rejected_status" description="The status to indicate that a person has rejected a collaboration request">Rejected</string>
    <string name="box_sharesdk_role_description_editor" description="Description of the role, which is the level of permission the person will be granted">Upload, download, preview, share and edit files.</string>
    <string name="box_sharesdk_role_description_viewer" description="Description of the role, which is the level of permission the person will be granted">Download, preview and share files.</string>
    <string name="box_sharesdk_role_description_previewer" description="Description of the role, which is the level of permission the person will be granted">Preview files only.</string>
    <string name="box_sharesdk_role_description_uploader" description="Description of the role, which is the level of permission the person will be granted">Upload files only.</string>
    <string name="box_sharesdk_role_description_previewer_uploader" description="Description of the role, which is the level of permission the person will be granted">Preview and upload files.</string>
    <string name="box_sharesdk_role_description_viewer_uploader" description="Description of the role, which is the level of permission the person will be granted">Upload, download, preview and share files.</string>
    <string name="box_sharesdk_role_description_co_owner" description="Description of the role, which is the level of permission the person will be granted">Same permissions as the owner.</string>
    <string name="box_sharesdk_send_or_share" description="text for a title that allows the user to send or share link">Send or Share</string>
    <string name="box_sharesdk_invite_collab_hint">Type a Name or Email Address</string>
    <string name="lorem_placeholder">Lorem ipsum dolor sit amet, consectetur adipiscing elit, consectetur adipiscing elit</string>
</resources>