<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <import type="android.view.View"/>
        <import type="com.box.androidsdk.share.utils.SharedLinkBindingAdapters" />
        <variable name="onInviteCollabsClickListener"
            type="android.view.View.OnClickListener"/>
    </data>
    <FrameLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ScrollView
            android:layout_width="match_parent"
            android:background="@color/box_sharesdk_screen_background"
            android:layout_height="match_parent">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    style="@style/BoxCellTitle"
                    android:layout_marginLeft="@dimen/box_sharesdk_horizontal_margin_new"
                    android:layout_marginTop="@dimen/box_sharesdk_vertical_margin_new"
                    android:text="@string/box_sharesdk_invite_collaborators"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <LinearLayout
                    android:layout_marginTop="@dimen/box_sharesdk_vertical_margin_title_to_cell"
                    android:background="@color/box_sharesdk_components_background"
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:layout_height="wrap_content">

                    <EditText
                        android:textAppearance="@style/BoxCellTitle"
                        android:id="@+id/inviteCollabs"
                        android:layout_width="match_parent"
                        android:focusable="false"
                        android:layout_height="@dimen/box_sharesdk_small_cell_height"
                        android:paddingLeft="@dimen/box_sharesdk_horizontal_margin_new"
                        android:paddingRight="@dimen/box_sharesdk_horizontal_margin_new"
                        android:hint="@string/box_sharesdk_invite_collab_hint"
                        android:onClickListener="@{onInviteCollabsClickListener}"
                        android:background="@drawable/box_ripple_btn_blue" />
                    <View style="@style/BoxInsetDivider" />
                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:clickable="true"
                        android:background="@drawable/box_ripple_btn_blue"
                        android:layout_height="@dimen/box_sharesdk_small_cell_height">

                        <TextView
                            android:id="@+id/collaboratorsCount"
                            style="@style/BoxCellSubHeader"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/box_sharesdk_horizontal_margin_new"
                            android:layout_marginTop="@dimen/box_sharesdk_vertical_margin_cell_component"
                            android:text="Placeholder"
                            android:layout_weight="1"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/inviteCollabs" />
                        <TextView
                            android:text="Placeholder"
                            android:layout_marginTop="@dimen/box_sharesdk_vertical_margin_cell_component"
                            android:layout_marginRight="@dimen/box_sharesdk_horizontal_margin_new"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                </LinearLayout>

                <TextView
                    style="@style/BoxCellTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/box_sharesdk_horizontal_margin_new"
                    android:layout_marginTop="@dimen/box_sharesdk_vertical_margin_new"
                    android:text="@string/box_sharesdk_title_share_link" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:background="@color/box_sharesdk_components_background"
                    android:layout_marginTop="@dimen/box_sharesdk_vertical_margin_title_to_cell"
                    android:layout_height="wrap_content">
                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/box_sharesdk_big_cell_height">
                        <Switch
                            android:id="@+id/shared_link_switch"
                            style="@style/BoxSwitchNew"
                            android:layout_marginTop="@dimen/box_sharesdk_vertical_margin_cell_component"
                            android:layout_marginLeft="@dimen/box_sharesdk_horizontal_margin_new"
                            android:layout_marginRight="@dimen/box_sharesdk_horizontal_margin_new"
                            android:background="@color/box_sharesdk_togglebar_background"
                            android:checked="true"
                            app:layout_constraintVertical_weight="1"
                            tools:text="@string/box_sharesdk_share_link_enabled"
                            android:text="@{sharedLinkSwitch.checked ? @string/box_sharesdk_share_link_enabled: @string/box_sharesdk_enable_share_link}"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/temp"
                            style="@style/BoxCellText"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="@dimen/box_sharesdk_horizontal_margin_new"
                            android:layout_marginLeft="@dimen/box_sharesdk_horizontal_margin_new"
                            android:layout_marginBottom="@dimen/box_sharesdk_vertical_margin_cell_component"
                            android:onClick="@{() -> SharedLinkBindingAdapters.onLinkClick(sharedLinkSwitch.isChecked(), temp)}"
                            android:text="@{sharedLinkSwitch.checked ? @string/lorem_placeholder: @string/box_sharesdk_no_shared_link_instructions}"
                            app:layout_constraintTop_toBottomOf="@id/shared_link_switch"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            tools:text="@string/lorem_placeholder"
                            app:layout_constraintLeft_toLeftOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                    <View style="@style/BoxInsetDivider" android:visibility="@{sharedLinkSwitch.checked ? View.VISIBLE : View.GONE}"/>
                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="wrap_content"
                        android:clickable="true"
                        android:visibility="@{sharedLinkSwitch.checked ? View.VISIBLE : View.GONE}"
                        android:background="@drawable/box_ripple_btn_blue"
                        android:layout_height="@dimen/box_sharesdk_big_cell_height">
                        <TextView
                            android:layout_marginTop="@dimen/box_sharesdk_vertical_margin_cell_component"
                            android:layout_marginLeft="@dimen/box_sharesdk_horizontal_margin_new"
                            android:text="@string/box_sharesdk_access"
                            style="@style/BoxCellSubHeader"
                            android:layout_width="wrap_content"
                            android:layout_weight="1"
                            android:visibility="@{sharedLinkSwitch.checked ? View.VISIBLE : View.GONE}"
                            android:layout_height="wrap_content" />
                        <TextView
                            android:text="@string/lorem_placeholder"
                            android:layout_marginLeft="@dimen/box_sharesdk_horizontal_margin_new"
                            android:layout_marginBottom="@dimen/box_sharesdk_vertical_margin_cell_component"
                            style="@style/BoxCellText"
                            android:layout_width="wrap_content"
                            android:visibility="@{sharedLinkSwitch.checked ? View.VISIBLE : View.GONE}"
                            android:layout_marginRight="@dimen/box_sharesdk_vertical_margin_new"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                </LinearLayout>
                <TextView
                    style="@style/BoxCellTitle"
                    android:layout_marginTop="@dimen/box_sharesdk_vertical_margin_new"
                    android:layout_marginLeft="@dimen/box_sharesdk_horizontal_margin_new"
                    android:text="@string/box_sharesdk_send_or_share"
                    android:layout_width="wrap_content"
                    android:visibility="@{sharedLinkSwitch.checked ? View.VISIBLE : View.GONE}"
                    android:layout_height="wrap_content" />
                <LinearLayout
                    android:orientation="vertical"
                    android:background="@color/box_sharesdk_components_background"
                    android:layout_marginTop="@dimen/box_sharesdk_vertical_margin_title_to_cell"
                    android:layout_width="match_parent"
                    android:visibility="@{sharedLinkSwitch.checked ? View.VISIBLE : View.GONE}"
                    android:layout_height="wrap_content">
                    <Button
                        android:paddingLeft="@dimen/box_sharesdk_horizontal_margin_new"
                        style="@style/BoxCellSubHeader"
                        android:gravity="center_vertical"
                        android:text="@string/box_sharesdk_copy_link_new"
                        android:background="@drawable/box_ripple_btn_blue"
                        android:layout_width="match_parent"

                        android:layout_height="@dimen/box_sharesdk_small_cell_height" />
                    <View style="@style/BoxInsetDivider" />
                    <Button
                        android:id="@+id/share_via_button"
                        style="@style/BoxCellSubHeader"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/box_sharesdk_small_cell_height"
                        android:background="@drawable/box_ripple_btn_blue"
                        android:gravity="center_vertical"
                        android:paddingLeft="@dimen/box_sharesdk_horizontal_margin_new"
                        android:text="@string/box_sharesdk_share_via" />
                </LinearLayout>

            </LinearLayout>

        </ScrollView>


        <LinearLayout
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Switch
                android:id="@+id/shared_link_url_switch"
                style="@style/BoxSwitch"
                android:layout_height="@dimen/box_sharesdk_collaboration_cell_height"
                android:background="@color/box_sharesdk_togglebar_background"
                android:text="@string/box_sharesdk_share_link_enabled"
                android:checked="true"
                />
            <TextView
                android:id="@+id/enable_share_link_instructions"
                style="@style/BoxBodyText"
                android:text="@string/box_sharesdk_no_shared_link_instructions"
                android:layout_margin="@dimen/box_sharesdk_horizontal_margin"
                android:visibility="gone"
                />
            <LinearLayout
                android:id="@+id/shared_link_options_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginBottom="@dimen/box_sharesdk_vertical_margin"
                android:animateLayoutChanges="true">
                <LinearLayout
                    style="@style/BoxOptionsLayout">
                    <ImageView
                        style="@style/BoxLabelIcon"
                        android:src="@drawable/ic_box_sharesdk_link_grey_24dp"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/shared_link_url_text"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:paddingLeft="@dimen/box_sharesdk_horizontal_margin"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/box_sharesdk_collaboration_cell_height"
                    android:layout_marginBottom="@dimen/box_sharesdk_vertical_margin"
                    android:orientation="horizontal">
                    <Button
                        android:id="@+id/shared_link_copy_link_btn"
                        style="@style/RaisedButton"
                        android:layout_height="@dimen/box_sharesdk_button_height"
                        android:text="@string/box_sharesdk_copy_link"
                        />
                    <Button
                        android:id="@+id/shared_link_send_link_btn"
                        style="@style/RaisedButton"
                        android:layout_height="@dimen/box_sharesdk_button_height"
                        android:layout_marginLeft="@dimen/box_sharesdk_horizontal_margin"
                        android:text="@string/box_sharesdk_send_link"
                        />
                </LinearLayout>

                <View style="@style/BoxDivider"
                    android:layout_marginTop="@dimen/box_sharesdk_vertical_margin"
                    android:layout_marginBottom="@dimen/box_sharesdk_vertical_margin"/>

                <!-- Shared Link Access -->
                <TextView
                    android:id="@+id/shared_link_link_access_header"
                    style="@style/BoxHeaderText"
                    android:layout_gravity="left|start|center_vertical"
                    android:gravity="left|start|center_vertical"
                    android:text="@string/box_sharesdk_access"
                    />
                <LinearLayout
                    android:id="@+id/shared_link_access_layout"
                    style="@style/BoxOptionsLayout"
                    android:visibility="gone">
                    <ImageView
                        style="@style/BoxLabelIcon"
                        android:src="@drawable/ic_box_sharesdk_public_grey_24dp" />
                    <TextView
                        android:id="@+id/shared_link_access_text"
                        style="@style/BoxLabelText" />
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/shared_link_download_layout"
                    style="@style/BoxOptionsLayout"
                    android:visibility="gone">
                    <ImageView
                        style="@style/BoxLabelIcon"
                        android:src="@drawable/ic_box_sharesdk_get_app_grey_24dp" />
                    <TextView
                        android:id="@+id/shared_link_download_text"
                        style="@style/BoxLabelText" />
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/shared_link_password_protected_layout"
                    style="@style/BoxOptionsLayout"
                    android:visibility="gone">
                    <ImageView
                        style="@style/BoxLabelIcon"
                        android:src="@drawable/ic_box_sharesdk_lock_grey_24dp" />
                    <TextView
                        android:id="@+id/shared_link_password_protected_text"
                        style="@style/BoxLabelText" />
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/shared_link_expiration_layout"
                    style="@style/BoxOptionsLayout"
                    android:visibility="gone">
                    <ImageView
                        style="@style/BoxLabelIcon"
                        android:src="@drawable/ic_box_sharesdk_query_builder_grey_24dp" />
                    <TextView
                        android:id="@+id/shared_link_expiration_text"
                        style="@style/BoxLabelText" />
                </LinearLayout>
                <Button
                    android:id="@+id/share_edit_link_access"
                    style="@style/RaisedGrayButton"
                    android:layout_height="@dimen/box_sharesdk_button_height"
                    android:layout_marginLeft="@dimen/box_sharesdk_collaboration_cell_height"
                    android:layout_marginBottom="@dimen/box_sharesdk_vertical_margin"
                    android:text="@string/box_sharesdk_edit_link_access"
                    />
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
</layout>